changes to make the homepage responsive

--- a/styles.css
+++ b/styles.css
@@ -46,18 +46,21 @@ body{
   }
   .container {
     position: absolute;
-    margin: 2vh;
-    width: auto;
+    margin-top: 2.5vh;
+    margin-left: 2.5%;
+    width: 95%;
     height: 95vh;
     background-color: rgba(0,0,0,.75)
   }
   .topnav {
     overflow: hidden;
+    display: flex;
     }
+    
   .topnav li {
     color: #f2f2f2;
     text-align: center;
-    padding: 6vh;
+    padding: 8vh;
     text-decoration: none;
     font-size: 1.5vw;
     display: inline;
@@ -80,8 +83,15 @@ body{
     padding-left: 5vw;
     font-family: "Raleway";
   }
-  .contact-phone, .Call-us{
-  }
+
+.subheader{
+  color:var(--offwhite)
+}
+
+.Call-us{
+  color: var(--light-pink);
+}
+
   .location-header{
     color: var(--pink);
     background: black;
@@ -93,30 +103,134 @@ body{
     margin: 0;
     padding: 2vh;
   }
+
+
   .title{
-    display: flexbox;
     float: right;
-    width: 50vw;
+    width: 40vw;
   }
-  .About-us{
-    display: block;
-  }
-  .title{
-    margin-top: 25vh;
-  }
+  
+
   .title h1{
     text-align: center;
-    font-size: 32px;
+    font-size: 2rem;
   }
   .title p{
-    font-size: 28px;
+    font-size: 1.7rem;
     text-align: center;
   }
   .First-para-home{
     display: flex;
-    gap: 5px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
     background-image: linear-gradient(to right, var(--offwhite) , var(--cyan));
   }
+
+  @media (max-width: 1200px){
+    .First-para-home img{
+    
+      transform: scale(80%);
+    }
+
+    .First-para-home img{
+    
+      margin-top: -70px;
+      margin-left: -150px;
+    }
+
+    .title{
+
+      width: 40vw;
+    }
+
+    .title h1{
+
+      font-size: 1.8rem;
+    }
+    .title p{
+      font-size: 1rem;
+
+    }
+
+
+  
+  }
+
+  @media (max-width: 850px){
+    .First-para-home img{
+    
+      transform: scale(70%);
+    }
+
+    .First-para-home img{
+    
+      margin-top: -105px;
+      margin-left: -130px;
+    }
+
+    .First-para-home {
+    gap:0px; 
+    }
+
+    .title{
+
+      width: 25vw;
+    }
+
+    .title h1{
+
+      font-size: 1.3rem;
+    }
+    .title p{
+      font-size: 0.8rem;
+
+    }
+
+    .About-us{
+      margin-top: -50px;
+      margin-right: 40px;
+    }
+
+  
+  }
+
+  @media (max-width: 576px){
+    .First-para-home img{
+      width: 25vh;
+      margin-top: 0px;
+      margin-left: 0px;
+      }
+
+      .First-para-home{
+        flex-direction: column;
+        }
+
+      .About-us{
+        margin-top: 0px;
+      margin-right: 0px;
+      }
+
+      .title h1{
+
+        font-size: 3rem;
+      }
+      .title p{
+        font-size: 1.5rem;
+  
+      }
+
+      .title{
+
+        width: 60vw;
+      }
+  
+  }
+
+
+
+
   .services-home{
     background-image: linear-gradient(to right, var(--offwhite) , var(--cyan));
     margin-bottom: 25px;
@@ -127,34 +241,42 @@ body{
   .services-line {
     width: 50vw;
     }
-  .outer-container {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-  }
+ 
   .under-services-title{
     text-align: center;
   }
   .table-of-services{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-right: 5%;
+    margin-left: 5%;
+
     /* margin-right: -15px;
     margin-left: -15px; */
   }
-  .henna-column{
+
+  /* columns */
+  .content-column{
     display: block;
-    width: 50vh;
+    width: 40vh;
+    padding:10px;
+
   }
-  .henna-column p{
-    font-size: 20px;
-    line-height: 1.5;
+  
+  .content-column h1{
+    font-size: 1.5rem;
   }
-  .henna-column img{
-    width: 50vh;
+
+  .content-column p{
+    font-size: 1rem;
+  
   }
-  .henna-column button{
+  .content-column img{
+    width: 40vh;
+  }
+  .content-column button{
     color: #212529;
     text-align: center;
     background-color: transparent;
@@ -166,27 +288,42 @@ body{
     cursor: pointer;
     transition: 0.5s;
 }
-.henna-column button:hover{
+.content-column button:hover{
   background-color: black;
   color: white;
 }
 
+@media (max-width: 1200px){
+  .content-column{
 
-  .bridal-column{
+    width: 24vh;
+    padding:5px;
+
+
+  }
+
+  .content-column img{
+    width: 24vh;
+  }
+
+}
+
+
+  /* .content-column{
     display: block;
     width: 50vh;
   }
-  .bridal-column img{
+  .content-column img{
     width: 50vh;
   }
-  .bridal-title{
+  .content-title{
     font-size: 28px;
   }
-  .bridal-column p{
+  .content-column p{
     font-size: 20px;
     line-height: 1.5;
   }
-  .bridal-column button{
+  .content-column button{
     color: #212529;
     text-align: center;
     background-color: transparent;
@@ -198,28 +335,28 @@ body{
     cursor: pointer;
     transition: 0.5s;    
   }
-  .bridal-column button:hover{
+  .content-column button:hover{
     background-color: black;
   color: white;
   }
-  .henna-title{
+  .content-title{
     font-size: 28px;
   }
-  .hair-column{
+  .content-column{
     display: block;
     width: 50vh;
   }
-  .hair-column img{
+  .content-column img{
     width: 50vh;
   }
-  .hair-column p{
+  .content-column p{
     font-size: 20px;
     line-height: 1.5;
   }
-  .hair-title{
+  .content-title{
     font-size: 28px;
   }
-  .hair-column button{
+  .content-column button{
     color: #212529;
     text-align: center;
     background-color: transparent;
@@ -231,25 +368,25 @@ body{
     cursor: pointer;
     transition: 0.5s;
   }
-  .hair-column button:hover{
+  .content-column button:hover{
     background-color: black;
   color: white;
   }
-  .makeup-column{
+  .content-column{
     display: block;
     width: 50vh;
   }
-  .makeup-column p{
+  .content-column p{
     font-size: 20px;
     line-height: 1.5;
   }
-  .makeup-column img{
+  .content-column img{
     width: 50vh;
   }
-  .makeup-title{
+  .content-title{
     font-size: 28px;
   }
-  .makeup-column button{
+  .content-column button{
     color: #212529;
     text-align: center;
     background-color: transparent;
@@ -261,10 +398,11 @@ body{
     cursor: pointer;
     transition: 0.5s;
   }
-  .makeup-column button:hover{
+  .content-column button:hover{
     background-color: black;
   color: white;
-  }
+  } */
+
   .contact-header{
       text-align: center;
       color: white;
@@ -285,11 +423,12 @@ body{
   }
   .footer{
     text-align: center;
-    color: white;
+    color: #636363;
+    font-size: 1.5rem;
     background-image: linear-gradient(to right, black , black);
     margin: 0;
     padding: 1vh;
-    height: 12vh;
+    height: 8vh;
   }
   
   /* /* .top-bar-faded{
@@ -391,3 +530,8 @@ body{
     object-fit: cover;
 } */
    
+/*responsive navbar*/
+
+
+
+
