--- a/hennastyles.css
+++ b/hennastyles.css
@@ -121,3 +121,217 @@
   padding: 1vh;
   height: 8vh;
 }
+
+input{
+  display: none;
+}
+
+.container{
+  width: 100%;
+  text-align: center;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+h1{
+  font-weight: normal;
+  font-size: 35px;
+  position: relative;
+  margin: 40px 0 ;
+}
+h2{
+  font-weight: normal;
+  font-size: 35px;
+  position: relative;
+}
+
+h2::before{
+  content: '';
+  position: absolute;
+  width: 100px;
+  height: 3px;
+  background-color: #FF007C;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-62%);
+  animation: animate1 4s linear infinite;
+}
+
+h1::before{
+  content: '';
+  position: absolute;
+  width: 100px;
+  height: 3px;
+  background-color: #FF007C;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: animate 4s linear infinite;
+}
+
+@keyframes animate {
+  0%{
+    width: 100px;
+  }
+  50%{
+    width: 200px;
+  }
+  100%{
+    width: 100px;
+  }
+}
+
+@keyframes animate1 {
+  0%{
+    width: 100px;
+  }
+  50%{
+    width: 400px;
+  }
+  100%{
+    width: 100px;
+  }
+}
+
+.top-content{
+  width: 90%;
+  margin: 0 auto 20px auto;
+  height: 60px;
+  display:flex;
+  align-items: center;
+  border-radius: 5px;
+  box-shadow: 3px 3px 5px ;
+}
+
+h3{
+  height: 100%;
+  line-height: 60px;
+  padding: 0 50px;
+}
+
+label{
+  display: inline-block;
+  height: 100%;
+  margin: 0 20px;
+  line-height: 60px;
+  font-size: 30px;
+  color: rgb(82, 76, 76);
+  transition: color .5s;
+  cursor: pointer;
+}
+
+label:hover{
+  color: black;
+}
+
+.gallery-photos{
+  width: 90%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+.pic{
+  position: relative;
+  height: 230px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px lightpink;
+  cursor: pointer;
+  transition: .5s;
+}
+
+.pic::before{
+  content:"Design";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+  width: 100%;
+  margin-top: -120px;
+  opacity: 0;
+  transition: .3s;
+  transition-delay: .2s;
+  z-index: 1;
+}
+.pic:after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  border-radius: 10px;
+  height: 0;
+  background-color: rgba(0, 0, 0, .4);
+  transition: .3s;
+}
+.pic:hover::after{
+  height: 100%;
+
+}
+.pic:hover::before{
+  margin-top: 0;
+  opacity: 1;
+  
+}
+#design1:checked ~ .container .gallery-photos .pic{
+  transform: scale(1);
+  opacity: 1;
+  position: relative;
+  transition: .5s;
+}
+#design1:checked ~ .container .gallery-photos .hair{
+  transform: scale(1);
+  opacity: 1;
+  position: relative;
+}
+
+#design2:checked ~ .container .gallery-photos .makeup,
+#design2:checked ~ .container .gallery-photos .henna{
+  opacity: 0;
+  transform: scale(0);
+  position: absolute;
+  transition: 0s;
+}
+
+#design3:checked ~ .container .gallery-photos .makeup{
+  transform: scale(1);
+  opacity: 1;
+  position: relative;
+}
+
+#design3:checked ~ .container .gallery-photos .hair,
+#design3:checked ~ .container .gallery-photos .henna{
+  opacity: 0;
+  transform: scale(0);
+  position: absolute;
+  transition: 0s;
+}
+
+#design4:checked ~ .container .gallery-photos .henna{
+  transform: scale(1);
+  opacity: 1;
+  position: relative;
+}
+
+#design4:checked ~ .container .gallery-photos .hair,
+#design4:checked ~ .container .gallery-photos .makeup{
+  opacity: 0;
+  transform: scale(0);
+  position: absolute;
+  transition: 0s;
+}
+.pic img{
+  width:100%;
+  height: 100%;
+  border-radius: 10px;
+  transition: .5s;
+}
+
